nenum & lrucache